--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="https://i.postimg.cc/7L9ZfDCf/Screenshot-2024-02-27-090253-removebg-preview-1.png">
   <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
   rel="stylesheet"
@@ -15,7 +15,7 @@
   rel="stylesheet"
 />
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    Cheslyn Herman Portfolio
   </title>
 </head>
 
